crates/sith_python_parser/tests/snapshots/invalid_syntax@import_alias_missing_asname.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/import_alias_missing_asname.py
---
## AST

```
Module(
    ModModule {
        range: 0..12,
        body: [
            Import(
                ImportStmt {
                    range: 0..11,
                    names: [
                        Alias {
                            range: 7..11,
                            name: Identifier {
                                id: Name("x"),
                                range: 7..8,
                            },
                            asname: None,
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | import x as
  |            ^ Syntax Error: Expected symbol after `as`
  |
