crates/sith_python_parser/tests/snapshots/invalid_syntax@import_stmt_empty.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/import_stmt_empty.py
---
## AST

```
Module(
    ModModule {
        range: 0..7,
        body: [
            Import(
                ImportStmt {
                    range: 0..6,
                    names: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | import
  |       ^ Syntax Error: Expected one or more symbol names after import
  |
