crates/sith_python_parser/tests/snapshots/invalid_syntax@import_stmt_parenthesized_names.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/import_stmt_parenthesized_names.py
---
## AST

```
Module(
    ModModule {
        range: 0..25,
        body: [
            Import(
                ImportStmt {
                    range: 0..6,
                    names: [],
                },
            ),
            Expr(
                ExprStmt {
                    range: 7..10,
                    value: Name(
                        NameExpr {
                            range: 8..9,
                            id: Name("a"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Import(
                ImportStmt {
                    range: 11..17,
                    names: [],
                },
            ),
            Expr(
                ExprStmt {
                    range: 18..24,
                    value: Tuple(
                        TupleExpr {
                            range: 18..24,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 19..20,
                                        id: Name("a"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 22..23,
                                        id: Name("b"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | import (a)
  |        ^ Syntax Error: Expected one or more symbol names after import
2 | import (a, b)
  |


  |
1 | import (a)
2 | import (a, b)
  |        ^ Syntax Error: Expected one or more symbol names after import
  |
