crates/sith_python_parser/tests/snapshots/invalid_syntax@invalid_del_target.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/invalid_del_target.py
---
## AST

```
Module(
    ModModule {
        range: 0..75,
        body: [
            Delete(
                DeleteStmt {
                    range: 0..9,
                    targets: [
                        BinOp(
                            BinOpExpr {
                                range: 4..9,
                                left: Name(
                                    NameExpr {
                                        range: 4..5,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                op: Add,
                                right: NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 8..9,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            Delete(
                DeleteStmt {
                    range: 10..22,
                    targets: [
                        Dict(
                            DictExpr {
                                range: 14..22,
                                items: [
                                    DictItem {
                                        key: Some(
                                            StringLiteral(
                                                StringLiteralExpr {
                                                    range: 15..18,
                                                    value: StringLiteralValue {
                                                        inner: Single(
                                                            StringLiteral {
                                                                range: 15..18,
                                                                value: "x",
                                                                flags: StringLiteralFlags {
                                                                    prefix: Empty,
                                                                    triple_quoted: false,
                                                                },
                                                            },
                                                        ),
                                                    },
                                                },
                                            ),
                                        ),
                                        value: NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 20..21,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    ],
                },
            ),
            Delete(
                DeleteStmt {
                    range: 23..37,
                    targets: [
                        Set(
                            SetExpr {
                                range: 27..37,
                                elts: [
                                    StringLiteral(
                                        StringLiteralExpr {
                                            range: 28..31,
                                            value: StringLiteralValue {
                                                inner: Single(
                                                    StringLiteral {
                                                        range: 28..31,
                                                        value: "x",
                                                        flags: StringLiteralFlags {
                                                            prefix: Empty,
                                                            triple_quoted: false,
                                                        },
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                    StringLiteral(
                                        StringLiteralExpr {
                                            range: 33..36,
                                            value: StringLiteralValue {
                                                inner: Single(
                                                    StringLiteral {
                                                        range: 33..36,
                                                        value: "y",
                                                        flags: StringLiteralFlags {
                                                            prefix: Empty,
                                                            triple_quoted: false,
                                                        },
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
            Delete(
                DeleteStmt {
                    range: 38..74,
                    targets: [
                        NoneLiteral(
                            NoneLiteralExpr {
                                range: 42..46,
                            },
                        ),
                        BooleanLiteral(
                            BooleanLiteralExpr {
                                range: 48..52,
                                value: true,
                            },
                        ),
                        BooleanLiteral(
                            BooleanLiteralExpr {
                                range: 54..59,
                                value: false,
                            },
                        ),
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 61..62,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 64..67,
                                value: Float(
                                    Float(0x3ff00000, 0x0) [1],
                                ),
                            },
                        ),
                        StringLiteral(
                            StringLiteralExpr {
                                range: 69..74,
                                value: StringLiteralValue {
                                    inner: Single(
                                        StringLiteral {
                                            range: 69..74,
                                            value: "abc",
                                            flags: StringLiteralFlags {
                                                prefix: Empty,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | del x + 1
  |     ^^^^^ Syntax Error: Invalid delete target
2 | del {'x': 1}
3 | del {'x', 'y'}
  |


  |
1 | del x + 1
2 | del {'x': 1}
  |     ^^^^^^^^ Syntax Error: Invalid delete target
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |


  |
1 | del x + 1
2 | del {'x': 1}
3 | del {'x', 'y'}
  |     ^^^^^^^^^^ Syntax Error: Invalid delete target
4 | del None, True, False, 1, 1.0, "abc"
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |     ^^^^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |           ^^^^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |                 ^^^^^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |                        ^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |                           ^^^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |                                ^^^^^ Syntax Error: Invalid delete target
  |
